refactor(auth): 重构认证服务与日志记录
- 移除 react-refresh 推荐配置并添加 react-refresh 插件
- 更新 ESLint 配置添加 only-export-components 规则
- 在 .gitignore 中添加 tsbuildinfo 和 docs 目录
- 删除 Alert Dialog、Badge、Button、Card UI 组件文件
- 修改 AdminLayout 使用 LucideIcon 类型定义
- 添加 AuthRouteGuards 路由守卫组件
- 优化 API 服务调用的泛型声明
- 重构 AuthService 登录验证逻辑添加输入校验
- 更新 application.yaml 配置支持环境变量注入
- 优化 LLM 调用日志记录使用 length 替代完整内容
- 添加会话消息查询的安全参数校验
- 修复聊天状态管理中的条件判断逻辑
- 移除 authStore 中的 ts-nocheck 注释